--- a/example/index.html
+++ b/example/index.html
@@ -20,7 +20,7 @@
     console.log("Ey das pretty gud!");
     var fistName = "Billbert";
     var lastName = "Obleay";
-    console.log("You have been blessed with the amazing name of  + firstName + " " + lastName);
+    console.log("You have been blessed with the amazing name of  + firstName + " " + lastName");
     
-    system.out.println("Hello World";
+    system.out.println("Hello World");
 </script>
