--- a/holiday/index.html
+++ b/holiday/index.html
@@ -21,7 +21,7 @@
         </div>
             
            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-        <script src="http://code.jquery.com/jquery-latest.min.js"
+        <script src="https://code.jquery.com/jquery-latest.min.js"
         type="text/javascript"></script>
         <script src="javascriptCode.js" type="text/javascript"></script>
     </body>
